--- a/index.html
+++ b/index.html
@@ -84,29 +84,39 @@
     </header>
 
     <!-- Banner Design -->
-     <section class="flex flex-col-reverse md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
-         <div class="content flex-1 text-center md:text-left">
-        <h2 class="text-4xl font-bold mb-8"><span class="text-sky-400">English</span> is Easy!!</h2>
-        <p class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive
-            Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ
-        </p>
-        <input class="mt-5" type="text" placeholder="Enter your name"><br>
-        <input class="mt-5" type="password" placeholder="Enter your password"> <br>
-        <button class="btn btn-primary mt-5">Get Started</button>
-    </div>
-    <div class="img flex-1">
-        <img src="./assets/hero-student.png" alt="">
-    </div>
-     </section>
-   
-     <section>
+    <section class="flex flex-col-reverse md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
+        <div class="content flex-1 text-center md:text-left">
+            <h2 class="text-4xl font-bold mb-8"><span class="text-sky-400">English</span> is Easy!!</h2>
+            <p class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে
+                চান, আমাদের Interactive
+                Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ
+            </p>
+            <input class="mt-5" type="text" placeholder="Enter your name"><br>
+            <input class="mt-5" type="password" placeholder="Enter your password"> <br>
+            <button class="btn btn-primary mt-5">Get Started</button>
+        </div>
+        <div class="img flex-1">
+            <img src="./assets/hero-student.png" alt="">
+        </div>
+    </section>
+
+    <!-- Lesson Section -->
+    <section>
         <h2 class="text-4xl font-bold mb-8 text-center"><span class="text-sky-400">Let's</span> Learn Vocabularies</h2>
 
         <div id="level-container" class="flex gap-5 flex-wrap justify-center mb-5"></div>
-     </section>
+    </section>
 
+    <!-- Lesson Word -->
+    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-8 grid grid-cols-3 gap-5">
+        <div class="bg-white rounded-xl shadow-sm text-center py-20 px-5">
+            <h2>Eager</h2>
+            <p>Meaning / pronounciation</p>
+            <div>"আগ্রহী / ইগার"</div>
+        </div>
+    </section>
 
-     <script src="./index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
