--- a/index.html
+++ b/index.html
@@ -108,13 +108,7 @@
     </section>
 
     <!-- Lesson Word -->
-    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-8 grid grid-cols-3 gap-5">
-        <div class="bg-white rounded-xl shadow-sm text-center py-20 px-5">
-            <h2>Eager</h2>
-            <p>Meaning / pronounciation</p>
-            <div>"আগ্রহী / ইগার"</div>
-        </div>
-    </section>
+    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-8 grid grid-cols-3 gap-5"></section>
 
     <script src="./index.js"></script>
 </body>
