--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
     </section>
 
     <!-- Lesson Word -->
-    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-8 grid grid-cols-3 gap-5"></section>
+    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-8 grid grid-cols-3 gap-5">
+
+        <div class="text-center col-span-full rounded-xl bg-sky-100 py-10 space-y-6 font-bangla">
+            <p class="text-xl font-medium text-gray-400">আপনি এখনো কোন Lesson Select করেন নি</p>
+            <h2 class="font-bold text-4xl">একটি Lesson Select করুন।</h2>
+        </div>
+
+    </section>
 
     <script src="./index.js"></script>
 </body>
