--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         <div id="level-container" class="flex gap-5 flex-wrap justify-center mb-5"></div>
     </section>
 
+    <section id="spiner" class="flex justify-center items-center hidden">
+        <span class="loading loading-bars loading-xl"></span>
+    </section>
+
     <!-- Lesson Word -->
     <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-8 grid grid-cols-3 gap-5">
 
@@ -121,12 +125,11 @@
     <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
     <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
         <div class="modal-box">
-            <h3 class="text-lg font-bold">Hello!</h3>
-            <p class="py-4">Press ESC key or click the button below to close</p>
+           <div id="details-container" class="space-y-5"></div>
             <div class="modal-action">
                 <form method="dialog">
                     <!-- if there is a button in form, it will close the modal -->
-                    <button class="btn">Close</button>
+                    <button class="btn btn-primary">Complete Learning</button>
                 </form>
             </div>
         </div>
