--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
         <div id="level-container" class="flex gap-5 flex-wrap justify-center mb-5"></div>
     </section>
 
+    <section class="flex justify-center">
+        <div class="join">
+            <div>
+                <label class="input validator join-item">
+                    <input id="input-search" type="text" placeholder="Search Word" required />
+                </label>
+            </div>
+            <button id="btn-search" class="btn btn-primary join-item">Search</button>
+        </div>
+    </section>
+
     <section id="spiner" class="flex justify-center items-center hidden">
         <span class="loading loading-bars loading-xl"></span>
     </section>
@@ -125,7 +136,7 @@
     <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
     <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
         <div class="modal-box">
-           <div id="details-container" class="space-y-5"></div>
+            <div id="details-container" class="space-y-5"></div>
             <div class="modal-action">
                 <form method="dialog">
                     <!-- if there is a button in form, it will close the modal -->
